--- a/src/css/dialog.css
+++ b/src/css/dialog.css
@@ -10,8 +10,8 @@
     padding: 0;
     background-color: var(--lm-background);
     border: 1px solid var(--lm-border);
-    border-radius: var(--lm-radius-lg);
-    box-shadow: var(--lm-shadow-lg);
+    border-radius: var(--lm-radius-large);
+    box-shadow: var(--lm-shadow-large);
     overflow: hidden;
 
     &::backdrop {
@@ -30,7 +30,7 @@
       }
 
       & > p {
-        font-size: var(--lm-text-sm);
+        font-size: var(--lm-text-7);
         color: var(--lm-muted-foreground);
         margin-bottom: 0;
       }
