--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -35,41 +35,41 @@
       grid-template-columns: repeat(4, 1fr);
     }
 
-    .col-sm-1 { --col-span: 1; }
-    .col-sm-2 { --col-span: 2; }
-    .col-sm-3 { --col-span: 3; }
-    .col-sm-4 { --col-span: 4; }
-    .col-sm-full { --col-span: 4; }
+    .col-small-1 { --col-span: 1; }
+    .col-small-2 { --col-span: 2; }
+    .col-small-3 { --col-span: 3; }
+    .col-small-4 { --col-span: 4; }
+    .col-small-full { --col-span: 4; }
   }
 
   @container (min-width: 641px) and (max-width: 1024px) {
-    .col-md-1 { --col-span: 1; }
-    .col-md-2 { --col-span: 2; }
-    .col-md-3 { --col-span: 3; }
-    .col-md-4 { --col-span: 4; }
-    .col-md-5 { --col-span: 5; }
-    .col-md-6 { --col-span: 6; }
-    .col-md-7 { --col-span: 7; }
-    .col-md-8 { --col-span: 8; }
-    .col-md-9 { --col-span: 9; }
-    .col-md-10 { --col-span: 10; }
-    .col-md-11 { --col-span: 11; }
-    .col-md-12 { --col-span: 12; }
+    .col-medium-1 { --col-span: 1; }
+    .col-medium-2 { --col-span: 2; }
+    .col-medium-3 { --col-span: 3; }
+    .col-medium-4 { --col-span: 4; }
+    .col-medium-5 { --col-span: 5; }
+    .col-medium-6 { --col-span: 6; }
+    .col-medium-7 { --col-span: 7; }
+    .col-medium-8 { --col-span: 8; }
+    .col-medium-9 { --col-span: 9; }
+    .col-medium-10 { --col-span: 10; }
+    .col-medium-11 { --col-span: 11; }
+    .col-medium-12 { --col-span: 12; }
   }
 
   @container (min-width: 1025px) {
-    .col-lg-1 { --col-span: 1; }
-    .col-lg-2 { --col-span: 2; }
-    .col-lg-3 { --col-span: 3; }
-    .col-lg-4 { --col-span: 4; }
-    .col-lg-5 { --col-span: 5; }
-    .col-lg-6 { --col-span: 6; }
-    .col-lg-7 { --col-span: 7; }
-    .col-lg-8 { --col-span: 8; }
-    .col-lg-9 { --col-span: 9; }
-    .col-lg-10 { --col-span: 10; }
-    .col-lg-11 { --col-span: 11; }
-    .col-lg-12 { --col-span: 12; }
+    .col-large-1 { --col-span: 1; }
+    .col-large-2 { --col-span: 2; }
+    .col-large-3 { --col-span: 3; }
+    .col-large-4 { --col-span: 4; }
+    .col-large-5 { --col-span: 5; }
+    .col-large-6 { --col-span: 6; }
+    .col-large-7 { --col-span: 7; }
+    .col-large-8 { --col-span: 8; }
+    .col-large-9 { --col-span: 9; }
+    .col-large-10 { --col-span: 10; }
+    .col-large-11 { --col-span: 11; }
+    .col-large-12 { --col-span: 12; }
   }
 
   .grid {
