--- a/src/css/progress.css
+++ b/src/css/progress.css
@@ -82,12 +82,12 @@
     border-radius: var(--lm-radius-full);
     animation: lm-spin 0.6s linear infinite;
 
-    &.sm {
+    &.small {
       width: 1rem;
       height: 1rem;
     }
 
-    &.lg {
+    &.large {
       width: 2rem;
       height: 2rem;
       border-width: 3px;
