Add smooth tooltip support.

--- a/docs/templates/base.html
+++ b/docs/templates/base.html
@@ -7,7 +7,7 @@
   <title>{% block title %}{{ config.title }}{% endblock %}</title>
   <link rel="stylesheet" href="/longterm.min.css">
   <script src="/longterm.min.js" defer></script>
-  <script src="/main.js" defer></script>
+  <script src="/main.js"></script>
   <style>
     .demo-section {
       margin-bottom: var(--lm-space-18);
